--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="ViewStudents">Test Excel Upload</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="ViewStudents">View Students</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="UploadStudents">Upload Students</a>
                         </li>
                     </ul>
                 </div>
