--- a/Views/Login/UploadStudents.cshtml
+++ b/Views/Login/UploadStudents.cshtml
@@ -12,7 +12,7 @@
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload Focus File:</p>
-                <input type="file" name="files" multiple />
+                <input type="file" name="focusFiles" multiple />
             </div>
         </div>
         <div class="form-group">
@@ -27,7 +27,7 @@
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload ClassLink File:</p>
-                <input type="file" name="files" multiple />
+                <input type="file" name="classLinkFiles" multiple />
             </div>
         </div>
         <div class="form-group">
