--- a/Views/Login/ViewStudents.cshtml
+++ b/Views/Login/ViewStudents.cshtml
@@ -25,6 +25,9 @@
                         @Html.DisplayNameFor(model => model.Email)
                     </th>
                     <th>
+                        @Html.DisplayNameFor(model => model.QrCode)
+                    </th>
+                    <th>
                         @Html.DisplayNameFor(model => model.GradeLevel)
                     </th>
                 </tr>
@@ -44,6 +47,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.QrCode)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.GradeLevel)
