--- a/Views/Login/UploadStudents.cshtml
+++ b/Views/Login/UploadStudents.cshtml
@@ -11,7 +11,7 @@
     <form method="post" enctype="multipart/form-data" asp-controller="Login" asp-action="UploadFocus">
         <div class="form-group">
             <div class="col-md-10">
-                <p>Upload Focus File:</p>
+                <p>Upload Focus Student Excel File:</p>
                 <input type="file" name="focusFiles" multiple />
             </div>
         </div>
@@ -26,8 +26,23 @@
     <form method="post" enctype="multipart/form-data" asp-controller="Login" asp-action="UploadClassLink">
         <div class="form-group">
             <div class="col-md-10">
-                <p>Upload ClassLink File:</p>
+                <p>Upload ClassLink Exel File File:</p>
                 <input type="file" name="classLinkFiles" multiple />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" value="Upload" />
+            </div>
+        </div>
+    </form>
+</div>
+<div>
+    <form method="post" enctype="multipart/form-data" asp-controller="Login" asp-action="UploadIDs">
+        <div class="form-group">
+            <div class="col-md-10">
+                <p>Upload Focus ID PDF File</p>
+                <input type="file" name="idPdfs" multiple />
             </div>
         </div>
         <div class="form-group">
