--- a/Views/Login/ViewStudents.cshtml
+++ b/Views/Login/ViewStudents.cshtml
@@ -33,34 +33,65 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach(var item in Model)
+                @foreach (var item in Model)
                 {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StudentID)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Email)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.QrCode)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.GradeLevel)
-                    </td>
-                    <td>
-                        <a asp-action="PrintID">Print ID Badge</a>
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StudentID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QrCode)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.GradeLevel)
+                        </td>
+                        <td>
+                            @using (Html.BeginForm("SaveID", "Login", FormMethod.Post))
+                            {
+                               <div>
+                                   <button type="submit" class="btn btn-success" name="id" value="@item.ID"><i class='fa fa-file'>Download</i></button>
+                               </div>
+                            }
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
     }
 </body>
 </html>
+
+@section Scripts{
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <script type="text/javascript">
+        function SaveID(itemData) {
+            var id = $(itemData).data('assigned-id');
+            $.ajax({
+                "type": "POST",
+                "url": "/Login/SaveID",
+                "data": { "id": id },
+                "dataType": "json",
+                "success": SaveIDSuccess,
+                "error": SaveIDError
+            });
+        }
+        
+        function SaveIDSuccess() {
+            console.log('ID save Success');
+        }
+
+        function SaveIDError() {
+            console.log('ID save Error');
+        }
+    </script>
+
+}
