Identity Setup and Working Seed Data Working

--- a/Views/Admin/UploadStudents.cshtml
+++ b/Views/Admin/UploadStudents.cshtml
@@ -8,7 +8,7 @@
 
 <html>
 <div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Login" asp-action="UploadFocus">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadFocus">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload Focus Student Excel File:</p>
@@ -23,7 +23,7 @@
     </form>
 </div>
 <div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Login" asp-action="UploadClassLink">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadClassLink">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload ClassLink Exel File File:</p>
@@ -38,7 +38,7 @@
     </form>
 </div>
 <div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Login" asp-action="UploadIDs">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadIDs">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload Focus ID PDF File</p>
