--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,55 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">This Page Is Currently Under Construction</h1>
+
+<div class="row my-3">
+    <div class="col-sm-6 d-flex align-items-stretch">
+        <div class="card">
+            <img class="card-img-top p-3" src="/images/franklin_map.jpg" alt="Map">
+            <div class="card-body">
+                <p class="card-text">Based in northwest Louisiana, Apex has been serving its customers for over 25 years. </p>
+                <p class="card-text">Customer service and quality are our top priorities. Our agents and application help you get the job done better and faster.</p>
+                <p class="card-text">Reach out to one of our qualified agents to see how you can get started with Apex Drilling Fluid Analysis today!</p>
+            </div>
+        </div>
+
+    </div>
+    <div class="col-sm-6 d-flex align-items-stretch">
+        <div class="card">
+            <div class="card-body">
+                <!-- Call to Action Well -->
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="img-fluid" src="~/images/main-slideshow/slide1.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="~/images/main-slideshow/slide2.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="~/images/main-slideshow/slide3.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="~/images/main-slideshow/slide4.jpg" alt="First slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
