--- a/Views/Student/ViewStudents.cshtml
+++ b/Views/Student/ViewStudents.cshtml
@@ -55,7 +55,7 @@
                             @Html.DisplayFor(modelItem => item.GradeLevel)
                         </td>
                         <td>
-                            @using (Html.BeginForm("SaveID", "Admin", FormMethod.Post))
+                            @using (Html.BeginForm("SaveID", "Student", FormMethod.Post))
                             {
                                <div>
                                    <button type="submit" class="btn btn-success" name="id" value="@item.ID"><i class='fa fa-file'>Download</i></button>
@@ -77,7 +77,7 @@
             var id = $(itemData).data('assigned-id');
             $.ajax({
                 "type": "POST",
-                "url": "/Admin/SaveID",
+                "url": "/Student/SaveID",
                 "data": { "id": id },
                 "dataType": "json",
                 "success": SaveIDSuccess,
