--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -3,13 +3,30 @@
 }
 <div class="row">
     <div class="col-3">
-        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
-            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-profile" aria-selected="false">View Students</a>
-            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-messages" aria-selected="false">Upload Files</a>
-            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" onclick="ViewUsers()" role="tab" aria-controls="v-pills-settings" aria-selected="false">Users</a>
-            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
-            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-settings" aria-selected="false">Logout</a>
+        <div class="nav flex-column nav-pills" id="v-pills-tab" aria-orientation="vertical">
+            <ul class="nav navbar-nav" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#" onclick="ViewOrders()" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#" onclick="ViewStudents()" role="tab" aria-controls="v-pills-profile" aria-selected="false">View Students</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#" onclick="UploadFiles()" role="tab" aria-controls="v-pills-messages" aria-selected="false">Upload Files</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#" onclick="ViewUsers()" role="tab" aria-controls="v-pills-settings" aria-selected="false">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+                </li>
+                <li class="nav-item">
+                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
+                    </form>
+                </li>
+            </ul>
+            
         </div>
     </div>
     <div class="col-9" id="panel">
@@ -51,7 +68,64 @@
                     div.innerHTML = data;
                 },
                 error: function (data) {
-                    console.log('Error getting products');
+                    console.log('Error getting users partial');
+                }
+            });
+        }
+
+        function ViewStudents() {
+            $.ajax({
+                url: '/Student/GetStudentPartial',
+                type: 'GET',
+                cache: false,
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting students partial');
+                }
+            });
+        }
+
+        function ViewOrders() {
+
+        }
+
+        function UploadFiles() {
+            $.ajax({
+                url: '/Admin/GetUploadFilesPartial',
+                type: 'GET',
+                cache: false,
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting file partial');
+                }
+            });
+
+        }
+
+        function Settings() {
+
+        }
+
+        function Logout() {
+            $.ajax({
+                url: '/Identity/Account/Logout',
+                type: 'POST',
+                cache: false,
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting file partial');
                 }
             });
         }
