--- a/Views/Admin/_ViewUsersPartial.cshtml
+++ b/Views/Admin/_ViewUsersPartial.cshtml
@@ -1,4 +1,29 @@
 ﻿@model IEnumerable<EmployeeModel>
+<button class="btn btn-primary" onclick="CreateUserPartial()">Add User <i class="fa fa-plus"></i></button>
+<div class="modal fade" id="addUserModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" asp-controller="Admin" asp-action="CreateUser">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addUserModalLabel">Add User</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group" id="addUserModalBody">
+
+
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <input type="submit" class="btn btn-primary" value="Create User" />
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 @if (Model.Count() > 0)
 {
     <table class="table">
