--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -148,6 +148,10 @@
             });
         }
 
+        function SubmitNewUser() {
+
+        }
+
         function Logout() {
             $.ajax({
                 url: '/Identity/Account/Logout',
