--- a/Views/Admin/_UploadFilesPartial.cshtml
+++ b/Views/Admin/_UploadFilesPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿<div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadFocus">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadFocus" id="UploadFocusForm">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload Focus Student Excel File:</p>
@@ -14,7 +14,7 @@
     </form>
 </div>
 <div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadClassLink">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadClassLink" id="UploadClassLinkForm">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload ClassLink Exel File File:</p>
@@ -29,7 +29,7 @@
     </form>
 </div>
 <div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadIDs">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="UploadIDs" id="UploadIdsForm">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload Focus ID PDF File</p>
