--- a/Views/Admin/_CreateUserPartial.cshtml
+++ b/Views/Admin/_CreateUserPartial.cshtml
@@ -13,11 +13,6 @@
     <span asp-validation-for="LastName" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label asp-for="UserName" class="control-label"></label>
-    <input asp-for="UserName" class="form-control" />
-    <span asp-validation-for="UserName" class="text-danger"></span>
-</div>
-<div class="form-group">
     <label asp-for="Email" class="control-label"></label>
     <input asp-for="Email" class="form-control" />
     <span asp-validation-for="Email" class="text-danger"></span>
@@ -31,6 +26,8 @@
 </div>
 <div class="form-group">
     <label asp-for="Password" class="control-label"></label>
-    <input asp-for="Password" class="form-control" />
+    <div asp-for="Password">
+        @Html.PasswordFor(m => m.Password)
+    </div>
     <span asp-validation-for="Password" class="text-danger"></span>
 </div>
