--- a/Views/Admin/_ViewUsersPartial.cshtml
+++ b/Views/Admin/_ViewUsersPartial.cshtml
@@ -3,7 +3,7 @@
 <div class="modal fade" id="addUserModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form method="post" asp-controller="Admin" asp-action="CreateUser">
+            <form method="post" asp-controller="Admin" asp-action="CreateUser" id="form">
                 <div class="modal-header">
                     <h5 class="modal-title" id="addUserModalLabel">Add User</h5>
                     <button type="button" class="close" data-dismiss="modal">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <input type="submit" class="btn btn-primary" value="Create User" />
+                    <button class="btn btn-primary" type="submit">Create User</button>
                 </div>
             </form>
         </div>
@@ -46,26 +46,80 @@
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td>
-                <td>
-                    <div>
-                        <button type="submit" class="btn btn-success" name="id" value=""><i class='bi bi-three dots'></i></button>
-                    </div>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsActive)
+                    </td>
+                    <td>
+                        <div>
+                            <button type="submit" class="btn btn-success" name="id" value=""><i class='bi bi-three dots'></i></button>
+                        </div>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
+}
+@section Scripts{
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#form').submit(function (event) {
+                event.preventDefault();
+
+                //Get form Object
+                $f = $(event.CurrentTarget);
+                alert($f);
+                //Check if the form is valid
+                if ($f.valid()) {
+                    //Fetch the url and method
+                    var url = $f.attr("action");
+                    var method = $f.attr("method");
+                    if (method.toUpperCase() === "POST") {
+                        var data = new FormData(this);
+
+                        $.ajax({
+                            url: url,
+                            method: "POST",
+                            data: data,
+                            processData: false,
+                            contentType: false,
+                            success: FormSuccess,
+                            error: FormError,
+                            complete: function (jqXHR, status) {
+                                console.log(jqXHR);
+                                console.log(status);
+                                $f.trigger('reset');
+                            }
+                        });
+                    }
+                }
+
+
+            });
+        });
+
+        function FormSuccess(res) {
+            console.log(res);
+        }
+
+        function FormError(res) {
+            console.log(res);
+        }
+    </script>
+
 }
