--- a/Views/User/Dashboard.cshtml
+++ b/Views/User/Dashboard.cshtml
@@ -1,17 +1,115 @@
 ﻿@{
     ViewData["Title"] = "User Dashboard";
 }
-<ul class="nav flex-column">
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-    </li>
-</ul>
+<div class="row">
+    <div class="col-3">
+        <div class="nav flex-column nav-pills" id="v-pills-tab" aria-orientation="vertical">
+            <ul class="nav navbar-nav" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#" onclick="ViewStudents()" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#" onclick="ViewStudents()" role="tab" aria-controls="v-pills-profile" aria-selected="false">View Students</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+                </li>
+                <li class="nav-item">
+                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
+                    </form>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+    <div class="col-9" id="panel">
+
+    </div>
+</div>
+
+@section Scripts{
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $.ajax({
+                url: '/Student/GetStudentPartial',
+                type: 'GET',
+                cache: false,
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting students partial');
+                }
+            });
+
+        });
+
+
+        function ViewStudents() {
+            $.ajax({
+                url: '/Student/GetStudentPartial',
+                type: 'GET',
+                cache: false,
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting students partial');
+                }
+            });
+        }
+
+        function Settings() {
+
+        }
+
+        function Logout() {
+            $.ajax({
+                url: '/Identity/Account/Logout',
+                type: 'POST',
+                cache: false,
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting file partial');
+                }
+            });
+        }
+
+        function SearchStudent() {
+            var text = $(studentTextField).val();
+            console.log(text);
+            $.ajax({
+                url: '/Student/SearchStudents',
+                type: 'GET',
+                cache: false,
+                data: { "searchString": text },
+                dataType: "html",
+                success: function (data) {
+                    var div = document.getElementById("panel");
+                    div.innerHTML = data;
+                },
+                error: function (data) {
+                    console.log('Error getting users partial');
+                }
+            });
+        }
+
+    </script>
+
+}
