--- a/Views/Admin/_ViewUsersPartial.cshtml
+++ b/Views/Admin/_ViewUsersPartial.cshtml
@@ -3,7 +3,7 @@
 <div class="modal fade" id="addUserModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form method="post" asp-controller="Admin" asp-action="CreateUser" id="form">
+            <form id="CreateUserForm" method="post" asp-controller="Admin" asp-action="CreateUser" >
                 <div class="modal-header">
                     <h5 class="modal-title" id="addUserModalLabel">Add User</h5>
                     <button type="button" class="close" data-dismiss="modal">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button class="btn btn-primary" type="submit">Create User</button>
+                    <button class="btn btn-primary" type="submit" onclick="SubmitForm(this.parentElement, event)">Create User</button>
                 </div>
             </form>
         </div>
@@ -78,43 +78,11 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#form').submit(function (event) {
-                event.preventDefault();
-
-                //Get form Object
-                $f = $(event.CurrentTarget);
-                alert($f);
-                //Check if the form is valid
-                if ($f.valid()) {
-                    //Fetch the url and method
-                    var url = $f.attr("action");
-                    var method = $f.attr("method");
-                    if (method.toUpperCase() === "POST") {
-                        var data = new FormData(this);
-
-                        $.ajax({
-                            url: url,
-                            method: "POST",
-                            data: data,
-                            processData: false,
-                            contentType: false,
-                            success: FormSuccess,
-                            error: FormError,
-                            complete: function (jqXHR, status) {
-                                console.log(jqXHR);
-                                console.log(status);
-                                $f.trigger('reset');
-                            }
-                        });
-                    }
-                }
-
-
-            });
+        
         });
 
         function FormSuccess(res) {
-            console.log(res);
+            console.log("Success");
         }
 
         function FormError(res) {
