--- a/Views/IDOrder/_ViewIdOrdersPartial.cshtml
+++ b/Views/IDOrder/_ViewIdOrdersPartial.cshtml
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var item in Model)
+            @foreach (var item in Model)
             {
                 <tr>
                     <td>
@@ -41,4 +41,14 @@
 else
 {
     <h3>Hooray! No Current ID Orders!!</h3>
+}
+
+@section Scripts{
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <script type="text/javascript">
+
+        
+
+    </script>
 }
