--- a/Views/Student/_ViewStudentsPartial.cshtml
+++ b/Views/Student/_ViewStudentsPartial.cshtml
@@ -63,48 +63,13 @@
                         }
                         else
                         {
-                            @using (Html.BeginForm("SaveID", "Student", FormMethod.Post))
-                            {
-                                <div>
-                                    <button type="submit" class="btn btn-success" name="id" value="@item.ID"><i class='fa fa-file'>Download</i></button>
-                                </div>
-                            }
+                            <div>
+                                <button type="submit" class="btn btn-success" name="id" onclick="RequestIdPrint(@item.ID)"><i class='fa fa-file'>Request Print</i></button>
+                            </div>
                         }
                     </td>
                 </tr>
             }
         </tbody>
     </table>
-}
-
-
-
-
-@section Scripts{
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <script type="text/javascript">
-
-        function SaveID(itemData) {
-            var id = $(itemData).data('assigned-id');
-            $.ajax({
-                "type": "POST",
-                "url": "/Student/SaveID",
-                "data": { "id": id },
-                "dataType": "json",
-                "success": SaveIDSuccess,
-                "error": SaveIDError
-            });
-        }
-
-        function SaveIDSuccess() {
-            console.log('ID save Success');
-        }
-
-        function SaveIDError() {
-            console.log('ID save Error');
-        }
-
-       
-    </script>
 }
