--- a/Views/IDOrder/_ViewIdOrdersPartial.cshtml
+++ b/Views/IDOrder/_ViewIdOrdersPartial.cshtml
@@ -30,7 +30,7 @@
                     </td>
                     <td>
                         <div>
-                            <button type="submit" class="btn btn-success" name="print" value=""><i class="bi bi-printer-fill"></i></button>
+                            <button type="submit" class="btn btn-success" name="print" onclick="PrintID()"value=""><i class="bi bi-printer-fill"></i></button>
                         </div>
                     </td>
                 </tr>
@@ -43,12 +43,3 @@ else
     <h3>Hooray! No Current ID Orders!!</h3>
 }
 
-@section Scripts{
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <script type="text/javascript">
-
-        
-
-    </script>
-}
