--- a/Views/Admin/_UploadFilesPartial.cshtml
+++ b/Views/Admin/_UploadFilesPartial.cshtml
@@ -9,7 +9,7 @@
         Note: Id Photo Files must be named the Students ID.
     </p>
 </div>
-<div>
+<div class="input-group mb-3">
     <form method="post" enctype="multipart/form-data" id="UploadFocusForm" action="">
         <div class="form-group">
             <div class="col-md-10">
