--- a/Views/Admin/_ViewUsersPartial.cshtml
+++ b/Views/Admin/_ViewUsersPartial.cshtml
@@ -18,7 +18,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button class="btn btn-primary" type="submit" onclick="SubmitForm(this.parentElement, event)">Create User</button>
+                    <button class="btn btn-primary" type="submit" onclick="SubmitNewUser(this.parentElement, event)">Create User</button>
                 </div>
             </form>
         </div>
