--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,77 +3,120 @@
 
 @{
     ViewData["Title"] = "Log in";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
-<h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+    <div class="col-lg-3 col-md-2"></div>
+    <div class="col-lg-6 col-md-8 login-box">
+        <div class="col-lg-12 login-key">
+            <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="col-lg-12 login-title">
+            IdGen Login
+        </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+        <div class="col-lg-12 login-form">
+            <div class="col-lg-12 login-form">
+                <form id="account" method="post">
+                    <div class="form-group">
+                        <label class="form-control-label" asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-control-label" asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-lg-12 loginbttm">
+                        <div class="col-lg-6 login-btm login-text">
+                            <!-- Error Message -->
+                        </div>
+                        <div class="col-lg-6 login-btm login-button">
+                            <button type="submit" class="btn btn-outline-primary">LOGIN</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-2"></div>
+    </div>
+        <!--<div class="col-md-4">
+         <section>
+             <form id="account" method="post">
+                 <h4>Use a local account to log in.</h4>
+                 <hr />
+                 <div asp-validation-summary="All" class="text-danger"></div>
+                 <div class="form-group">
+                     <label asp-for="Input.Email"></label>
+                     <input asp-for="Input.Email" class="form-control" />
+                     <span asp-validation-for="Input.Email" class="text-danger"></span>
+                 </div>
+                 <div class="form-group">
+                     <label asp-for="Input.Password"></label>
+                     <input asp-for="Input.Password" class="form-control" />
+                     <span asp-validation-for="Input.Password" class="text-danger"></span>
+                 </div>
+                 <div class="form-group">
+                     <div class="checkbox">
+                         <label asp-for="Input.RememberMe">
+                             <input asp-for="Input.RememberMe" />
+                             @Html.DisplayNameFor(m => m.Input.RememberMe)
+                         </label>
+                     </div>
+                 </div>
+                 <div class="form-group">
+                     <button type="submit" class="btn btn-primary">Log in</button>
+                 </div>
+                 <div class="form-group">
+                     <p>
+                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                     </p>
+                 </div>
+             </form>
+         </section>
+     </div>
+     <div class="col-md-6 col-md-offset-2">
+             <section>
+                 <h4>Use another service to log in.</h4>
+                 <hr />
+                 @{
+                     if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                     {
+                         <div>
+                             <p>
+                                 There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                 for details on setting up this ASP.NET application to support logging in via external services.
+                             </p>
+                         </div>
+                     }
+                     else
+                     {
+                         <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                             <div>
+                                 <p>
+                                     @foreach (var provider in Model.ExternalLogins)
+                                     {
+                                         <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                     }
+                                 </p>
+                             </div>
+                         </form>
+                     }
+                 }
+             </section>
+         </div>-->
+    
+    </div>
+
+    @section Scripts {
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+        
+        <partial name="_ValidationScriptsPartial" />
+    }
