--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -38,14 +38,15 @@
 </div>
 
 @section Scripts{
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    
     <script src="~/lib/print-js/print.js"></script>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-   
+
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -64,9 +65,9 @@
                 }
             });
 
-            
 
-           
+
+
         });
 
         // The function takes Form and the event object as parameter
@@ -136,7 +137,7 @@
                 console.log(files[i]);
                 formData.append("focusFiles", files[i]);
             }
-          
+
             $.ajax(
                 {
                     url: '/Admin/UploadFocus',
@@ -296,7 +297,7 @@
                     var div = document.getElementById("addUserModalBody");
                     div.innerHTML = data;
                     $('#addUserModal').modal('show');
-               
+
                 },
                 error: function (data) {
                     console.log('Error getting file partial');
