--- a/Views/Shared/_ViewStudentsPartial.cshtml
+++ b/Views/Shared/_ViewStudentsPartial.cshtml
@@ -1,9 +1,61 @@
 ﻿@model IEnumerable<StudentModel>
 <div class="row">
     <div class="col-3">
-        <input type="text" class="form-control" placeholder="Search for Student" id="studentTextField" />
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for Student" id="studentTextField" />
+            <button class="btn btn-primary" onclick="SearchStudent()">Search</button>
+        </div>
     </div>
-    <button class="btn btn-primary" onclick="SearchStudent()">Search</button>
+    <div class="col-3">
+        <div class="btn-group">
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="printdropdownmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Print Grade
+                </button>
+                <div class="dropdown-menu" aria-labelledby="printdropdownmenu">
+                    <button class="dropdown-item" type="button">Pre-K</button>
+                    <button class="dropdown-item" type="button">Kindergarden</button>
+                    <button class="dropdown-item" type="button">1st</button>
+                    <button class="dropdown-item" type="button">2nd</button>
+                    <button class="dropdown-item" type="button">3rd</button>
+                    <button class="dropdown-item" type="button">4th</button>
+                    <button class="dropdown-item" type="button">5th</button>
+                    <button class="dropdown-item" type="button">6th</button>
+                    <button class="dropdown-item" type="button">7th</button>
+                    <button class="dropdown-item" type="button">8th</button>
+                    <button class="dropdown-item" type="button">9th</button>
+                    <button class="dropdown-item" type="button">10th</button>
+                    <button class="dropdown-item" type="button">11th</button>
+                    <button class="dropdown-item" type="button">12th</button>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="downloaddropdownmeny" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Download Grade
+                </button>
+                <div class="dropdown-menu" aria-labelledby="downloaddropdownmeny">
+                    <button class="dropdown-item" type="button">Pre-K</button>
+                    <button class="dropdown-item" type="button">Kindergarden</button>
+                    <button class="dropdown-item" type="button">1st</button>
+                    <button class="dropdown-item" type="button">2nd</button>
+                    <button class="dropdown-item" type="button">3rd</button>
+                    <button class="dropdown-item" type="button">4th</button>
+                    <button class="dropdown-item" type="button">5th</button>
+                    <button class="dropdown-item" type="button">6th</button>
+                    <button class="dropdown-item" type="button">7th</button>
+                    <button class="dropdown-item" type="button">8th</button>
+                    <button class="dropdown-item" type="button">9th</button>
+                    <button class="dropdown-item" type="button">10th</button>
+                    <button class="dropdown-item" type="button">11th</button>
+                    <button class="dropdown-item" type="button">12th</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-3">
+        
+    </div>
+    
 </div>
 @if (Model.Count() > 0)
 {
