--- a/Views/Shared/_ViewStudentsPartial.cshtml
+++ b/Views/Shared/_ViewStudentsPartial.cshtml
@@ -13,20 +13,20 @@
                     Print Grade
                 </button>
                 <div class="dropdown-menu" aria-labelledby="printdropdownmenu">
-                    <button class="dropdown-item" type="button">Pre-K</button>
-                    <button class="dropdown-item" type="button">Kindergarden</button>
-                    <button class="dropdown-item" type="button">1st</button>
-                    <button class="dropdown-item" type="button">2nd</button>
-                    <button class="dropdown-item" type="button">3rd</button>
-                    <button class="dropdown-item" type="button">4th</button>
-                    <button class="dropdown-item" type="button">5th</button>
-                    <button class="dropdown-item" type="button">6th</button>
-                    <button class="dropdown-item" type="button">7th</button>
-                    <button class="dropdown-item" type="button">8th</button>
-                    <button class="dropdown-item" type="button">9th</button>
-                    <button class="dropdown-item" type="button">10th</button>
-                    <button class="dropdown-item" type="button">11th</button>
-                    <button class="dropdown-item" type="button">12th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('Pre-K')">Pre-K</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('Kindergarden')">Kindergarden</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('1st')">1st</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('2nd')">2nd</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('3rd')">3rd</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('4th')">4th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('5th')">5th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('6th')">6th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('7th')">7th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('7th')">8th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('9th')">9th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('10th')">10th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('11th')">11th</button>
+                    <button class="dropdown-item" type="button" onclick="PrintGradeLevel('12th')">12th</button>
                 </div>
             </div>
             <div class="dropdown">
@@ -34,20 +34,20 @@
                     Download Grade
                 </button>
                 <div class="dropdown-menu" aria-labelledby="downloaddropdownmeny">
-                    <button class="dropdown-item" type="button">Pre-K</button>
-                    <button class="dropdown-item" type="button">Kindergarden</button>
-                    <button class="dropdown-item" type="button">1st</button>
-                    <button class="dropdown-item" type="button">2nd</button>
-                    <button class="dropdown-item" type="button">3rd</button>
-                    <button class="dropdown-item" type="button">4th</button>
-                    <button class="dropdown-item" type="button">5th</button>
-                    <button class="dropdown-item" type="button">6th</button>
-                    <button class="dropdown-item" type="button">7th</button>
-                    <button class="dropdown-item" type="button">8th</button>
-                    <button class="dropdown-item" type="button">9th</button>
-                    <button class="dropdown-item" type="button">10th</button>
-                    <button class="dropdown-item" type="button">11th</button>
-                    <button class="dropdown-item" type="button">12th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('Pre-K')">Pre-K</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('Kindergarden')">Kindergarden</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('1st')">1st</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('2nd')">2nd</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('3rd')">3rd</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('4th')">4th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('5th')">5th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('6th')">6th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('7th')">7th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('8th')">8th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('9th')">9th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('10th')">10th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('11th')">11th</button>
+                    <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('12th')">12th</button>
                 </div>
             </div>
         </div>
